# pchmd

./: LICENSE  README.md
pchmd_client/: README.md  pubspec.yaml
pchmd_client/android/app/: build.gradle
pchmd_client/android/app/src/profile/: AndroidManifest.xml
pchmd_client/ios/Runner.xcodeproj/: project.pbxproj
pchmd_client/linux/: my_application.cc
pchmd_client/macos/Runner.xcodeproj/: project.pbxproj
pchmd_client/web/: index.html
pchmd_client/windows/runner/: Runner.rc
pchmd_design/: ewma.ipynb
pchmd_gui/: README.md  analysis_options.yaml  pubspec.yaml
pchmd_gui/android/: gradle.properties
pchmd_gui/android/app/: build.gradle
pchmd_gui/android/app/src/main/: AndroidManifest.xml
pchmd_gui/android/app/src/main/kotlin/org/pchmd/pchmd_client/: MainActivity.kt
pchmd_gui/ios/Runner/: Info.plist
pchmd_gui/lib/: main.dart
pchmd_gui/linux/: CMakeLists.txt  my_application.cc
pchmd_gui/macos/Runner.xcodeproj/: project.pbxproj
pchmd_gui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
pchmd_gui/macos/Runner/Configs/: AppInfo.xcconfig
pchmd_gui/test/: widget_test.dart
pchmd_gui/web/: index.html  manifest.json
pchmd_gui/windows/: CMakeLists.txt
pchmd_gui/windows/runner/: Runner.rc  main.cpp
pchmd_rs/: Cargo.toml  build.rs
pchmd_rs/schema/: pchmd.capnp
pchmd_rs/src/: lib.rs
pchmd_rs/tests/: proto_tests.rs
pchmd_server/: Cargo.toml  build.rs
pchmd_server/schema/: pchmd.capnp
pchmd_server/src/: lib.rs
pchmd_server/tests/: proto_tests.rs
