[package]
name = "pchmd"
description = "PC Hardware Monitoring Display: Cross-Platform GUI and back-end designed to display PC sensor data(ex. Temps, Clocks, etc.) on a separate display (local or external)"
repository = "https://github.com/wmmc88/pchmd"
authors = ["Melvin Wang <melvin.mc.wang@gmail.com>"]
version = "0.1.0"
license = "MIT"
keywords = ["pchmd", "hardware", "monitoring", "sensors"]
categories = ["visualization", "hardware-support"]
readme = "README.md"
edition = "2021"

[dependencies]
capnp = "0.14.6"
chrono = "0.4.19"
crossterm = "0.23.2"
dialoguer = "0.10.1"
futures-util = "0.3.21"
hostname = "0.3.1"
jemallocator = "0.5.0"
lm-sensors = "0.1.4"
mac_address = "1.1.3"
platform-dirs = "0.3.0"
quinn = "0.8.3"
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
rcgen = "0.9.2"
rustls = { version = "0.20.6", features = ["quic"] }
rustls-pemfile = "1.0.0"
tabled = "0.7.0"
tokio = { version = "1.19.2", features = ["full"] }
uuid = "1.1.1"

[build-dependencies]
capnpc = "0.14.7"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
